# saigo

./: .gitignore  Cargo.toml  Cross.toml  LICENSE.txt  README.md  api.md  bundle.sh  clients.md  getting-started.md  model.safetensors  model.txt  training-data.md  usage.md
html/: index.css  index.html  index.js
html/calibrate/display/: index.css  index.html  index.js
html/config/: index.css  index.html  index.js
html/config/camera/: index.html  index.js
html/config/display/: index.css  index.html  index.js
html/display/: index.html
html/label-td/: index.css  index.html  index.js
html/saigo/: global.css  global.js  index.html
html/saigo/config/: index.html  index.js
html/saigo/config/camera/: index.css  index.html  index.js
html/saigo/config/display/: index.html  index.js
html/saigo/debug/: index.html  index.js
html/saigo/display/: index.js
src/: app.rs  error.rs  lib.rs  main.rs  sync.rs  vision_model.rs
src/app/: config.rs  game.rs
