[package]
name = "saigo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws"] }
image = "0.25.2"
imageproc = "0.25.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
