[package]
name = "saigo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws"] }
clap = { version = "4.5.20", features = ["derive"] }
confy = "0.6.1"
ctrlc = "3.4.5"
goban = "0.18.1"
image = "0.25.2"
imageproc = "0.25.0"
nokhwa = { version = "0.10.5", features = ["input-native", "output-threaded"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tch = "0.15.0"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.16", features = ["fs", "sync"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tungstenite = "0.24.0"
